Update spring boot to 2.6.7 and java to 18