@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.3.4.RELEASE</version>
+        <version>2.6.7</version>
     </parent>
     <groupId>com.jakubeeee.playground</groupId>
     <artifactId>parent</artifactId>
@@ -38,7 +38,7 @@
     <properties>
         <project.version>1.0-SNAPSHOT</project.version>
 
-        <java.version>15</java.version>
+        <java.version>18</java.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
 
@@ -98,7 +98,6 @@
                     <configuration>
                         <forkCount>0</forkCount>
                         <argLine>
-                            --illegal-access=deny
                             --enable-preview
                         </argLine>
                     </configuration>
@@ -120,7 +119,6 @@
                     <configuration>
                         <forkCount>0</forkCount>
                         <argLine>
-                            --illegal-access=deny
                             --enable-preview
                         </argLine>
                     </configuration>
